--- a/c/c/misc/logmerge/Makefile
+++ b/c/c/misc/logmerge/Makefile
@@ -1,12 +1,12 @@
 # Copyright (c) 1998  Dustin Sallings
-# $Id: Makefile,v 1.4 2002/06/06 01:03:55 dustin Exp $
+# $Id: Makefile,v 1.5 2002/06/06 04:01:24 dustin Exp $
 #
 # Makefile for Parallel Do
 
 SHELL=/bin/sh
 
-CFLAGS=-funroll-loops -O2 -Wall -Werror
-LDFLAGS=-lz
+CFLAGS=-g -Wall -Werror
+LDFLAGS=-g -lz
 
 logmerge: logmerge.o mymalloc.o
 	$(CC) -o $@ logmerge.o mymalloc.o $(LDFLAGS)
