--- a/c/c/misc/logmerge/Makefile
+++ b/c/c/misc/logmerge/Makefile
@@ -1,12 +1,12 @@
 # Copyright (c) 1998  Dustin Sallings
-# $Id: Makefile,v 1.6 2002/06/06 05:49:32 dustin Exp $
+# $Id: Makefile,v 1.7 2002/06/06 18:35:12 dustin Exp $
 #
 # Makefile for Parallel Do
 
 SHELL=/bin/sh
 
-CFLAGS=-O2 -Wall -Werror # -pg -g -DUSE_ASSERT
-LDFLAGS=-O2 -lz
+CFLAGS=-O2 -Wall -Werror -g -DUSE_ASSERT
+LDFLAGS=-O2 -g -lz
 
 logmerge: logmerge.o mymalloc.o
 	$(CC) -o $@ logmerge.o mymalloc.o $(LDFLAGS)
