--- a/java/java/spytools/build.xml
+++ b/java/java/spytools/build.xml
@@ -5,7 +5,7 @@
 
 	Copyright (c) 2002	Dustin Sallings <dustin@spy.net>
 
-	$Id: build.xml,v 1.5 2002/05/30 04:05:37 dustin Exp $
+	$Id: build.xml,v 1.6 2002/06/17 02:57:20 dustin Exp $
 
 	-->
 
@@ -43,6 +43,14 @@
 			packagenames="net.spy.*"
 			windowtitle="Spy.jar Documentation">
 		</javadoc>
+	</target>
+
+	<target name="install-docs" depends="docs">
+		<copy todir="/afs/spy.net/home/dustin/public_html/spyjar/j2/doc/">
+			<fileset dir="docs">
+				<include name="**"/>
+			</fileset>
+		</copy>
 	</target>
 
 	<target name="thinjar" depends="all">
