--- a/java/java/spytools/build.xml
+++ b/java/java/spytools/build.xml
@@ -5,7 +5,7 @@
 
 	Copyright (c) 2002	Dustin Sallings <dustin@spy.net>
 
-	$Id: build.xml,v 1.12 2002/07/11 07:56:05 dustin Exp $
+	$Id: build.xml,v 1.13 2002/07/11 23:22:11 dustin Exp $
 
 	-->
 
@@ -18,6 +18,13 @@
 		</fileset>
 		<pathelement path="${java.class.path}"/>
 		<pathelement path="."/>
+	</path>
+
+	<path id="junitclasses">
+		<fileset dir="${user.home}/lib/java">
+			<include name="junit.jar"/>
+			<include name="spytest.jar"/>
+		</fileset>
 	</path>
 
 	<target name="clean">
@@ -88,22 +95,16 @@
 		<javac srcdir="tests" destdir="tests" deprecation="on"
 				debug="on" verbose="off">
 			<classpath refid="myclasses"/>
-			<classpath>
-				<fileset dir="${user.home}/lib/java">
-					<include name="junit.jar"/>
-				</fileset>
-			</classpath>
+			<classpath refid="junitclasses"/>
 			<include name="net/spy/**/*.java"/>
 		</javac>
 	</target>
 
   <target name="tests" depends="test-classes">
     <java classname="net.spy.test.PoolTest">
-      <classpath refid="myclasses"/>
-			<classpath>
-				<fileset dir="${user.home}/lib/java">
-					<include name="junit.jar"/>
-				</fileset>
+			<classpath refid="myclasses"/>
+			<classpath refid="junitclasses"/>
+      <classpath>
         <pathelement path="tests"/>
 			</classpath>
     </java>
@@ -111,11 +112,9 @@
 
   <target name="tests-gui" depends="test-classes">
     <java classname="junit.swingui.TestRunner" fork="yes">
-      <classpath refid="myclasses"/>
-			<classpath>
-				<fileset dir="${user.home}/lib/java">
-					<include name="junit.jar"/>
-				</fileset>
+			<classpath refid="myclasses"/>
+			<classpath refid="junitclasses"/>
+      <classpath>
         <pathelement path="tests"/>
 			</classpath>
     </java>
