--- a/java/java/test/build.xml
+++ b/java/java/test/build.xml
@@ -3,7 +3,7 @@
 <!--
  Build system for multithreaded test classes.
 
- $Id: build.xml,v 1.2 2002/07/11 20:58:38 dustin Exp $
+ $Id: build.xml,v 1.3 2002/07/12 04:43:01 dustin Exp $
  -->
 
 <project name="mttest" default="spytest.jar" basedir=".">
@@ -21,8 +21,40 @@
 		<delete file="spytest.jar"/>
 	</target>
 
+	<target name="test-gui" depends="all">
+		<java classname="junit.swingui.TestRunner" fork="yes">
+			<classpath refid="buildclasspath"/>
+			<classpath>
+				<pathelement path="classes"/>
+			</classpath>
+		</java>
+	</target>
+
+	<target name="test" depends="all">
+		<java classname="net.spy.test.MTTestTest">
+			<classpath refid="buildclasspath"/>
+			<classpath>
+				<pathelement path="classes"/>
+			</classpath>
+		</java>
+	</target>
+
 	<target name="spytest.jar" depends="all">
 		<jar jarfile="spytest.jar" basedir="classes"/>
+	</target>
+
+	<target name="install" depends="spytest.jar,install-docs">
+		<copy file="spytest.jar"
+			tofile="/afs/spy.net/home/dustin/public_html/soft/spytest.jar"/>
+		<copy file="spytest.jar" tofile="${user.home}/lib/spytest.jar"/>
+	</target>
+
+	<target name="install-docs" depends="javadoc">
+		<copy todir="/afs/spy.net/home/dustin/public_html/projects/spytest/doc/">
+			<fileset dir="docs">
+				<include name="**"/>
+			</fileset>
+		</copy>
 	</target>
 
 	<target name="javadoc" depends="all">
