--- a/java/java/test/build.xml
+++ b/java/java/test/build.xml
@@ -3,7 +3,7 @@
 <!--
  Build system for multithreaded test classes.
 
- $Id: build.xml,v 1.3 2002/07/12 04:43:01 dustin Exp $
+ $Id: build.xml,v 1.4 2002/07/12 05:10:07 dustin Exp $
  -->
 
 <project name="mttest" default="spytest.jar" basedir=".">
@@ -39,8 +39,13 @@
 		</java>
 	</target>
 
-	<target name="spytest.jar" depends="all">
-		<jar jarfile="spytest.jar" basedir="classes"/>
+	<target name="spytest.jar" depends="all,javadoc">
+		<jar jarfile="spytest.jar" basedir="." excludes="**">
+			<zipfileset dir="classes" prefix=""/>
+			<zipfileset dir="src" prefix="src"/>
+			<zipfileset dir="docs" prefix="docs"/>
+			<zipfileset dir="." prefix="" includes="build.xml"/>
+		</jar>
 	</target>
 
 	<target name="install" depends="spytest.jar,install-docs">
