--- a/java/java/spytools/build.xml
+++ b/java/java/spytools/build.xml
@@ -5,7 +5,7 @@
 
 	Copyright (c) 2002	Dustin Sallings <dustin@spy.net>
 
-	$Id: build.xml,v 1.16 2002/07/22 07:27:24 dustin Exp $
+	$Id: build.xml,v 1.17 2002/07/22 07:33:23 dustin Exp $
 
 	-->
 
@@ -33,6 +33,9 @@
 				<include name="**/*.class"/>
 				<include name="spy/db/CachePreparedStatement.java"/>
 				<include name="spy/db/CachedResultSet.java"/>
+			</fileset>
+			<fileset dir="tests">
+				<include name="**/*.class"/>
 			</fileset>
 			<fileset dir=".">
 				<include name="spy.jar"/>
