--- a/java/java/spytools/build.xml
+++ b/java/java/spytools/build.xml
@@ -5,7 +5,7 @@
 
 	Copyright (c) 2002	Dustin Sallings <dustin@spy.net>
 
-	$Id: build.xml,v 1.18 2002/07/23 05:43:47 dustin Exp $
+	$Id: build.xml,v 1.19 2002/08/03 05:00:11 dustin Exp $
 
 	-->
 
@@ -54,6 +54,7 @@
 			sourcePath="."
 			packagenames="net.spy.*"
 			windowtitle="Spy.jar Documentation">
+			<link href="http://java.sun.com/j2se/1.3/docs/api/"/>
 		</javadoc>
 	</target>
 
