--- a/java/java/spytools/build.xml
+++ b/java/java/spytools/build.xml
@@ -5,7 +5,7 @@
 
 	Copyright (c) 2002	Dustin Sallings <dustin@spy.net>
 
-	$Id: build.xml,v 1.19 2002/08/03 05:00:11 dustin Exp $
+	$Id: build.xml,v 1.20 2002/08/12 21:59:35 dustin Exp $
 
 	-->
 
@@ -129,7 +129,7 @@
 	</target>
 
   <target name="tests" depends="test-classes">
-    <java classname="net.spy.test.PoolTest">
+    <java classname="net.spy.test.AllTests">
 			<classpath refid="myclasses"/>
 			<classpath refid="junitclasses"/>
       <classpath>
