For whatever reason, the test is failing under OS X if it expires at about the same time I sleep. Probably clock inaccuracy. Added a target to do tests other than the really long pool test.
Author: dustin
Date: 2002/08/13 04:18:07

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-631

--- a/java/java/spytools/build.xml
+++ b/java/java/spytools/build.xml
@@ -5,7 +5,7 @@
 
 	Copyright (c) 2002	Dustin Sallings <dustin@spy.net>
 
-	$Id: build.xml,v 1.20 2002/08/12 21:59:35 dustin Exp $
+	$Id: build.xml,v 1.21 2002/08/13 04:18:07 dustin Exp $
 
 	-->
 
@@ -130,6 +130,16 @@
 
   <target name="tests" depends="test-classes">
     <java classname="net.spy.test.AllTests">
+			<classpath refid="myclasses"/>
+			<classpath refid="junitclasses"/>
+      <classpath>
+        <pathelement path="tests"/>
+			</classpath>
+    </java>
+  </target>
+
+  <target name="tests-quick" depends="test-classes">
+    <java classname="net.spy.test.QuickTests">
 			<classpath refid="myclasses"/>
 			<classpath refid="junitclasses"/>
       <classpath>
