--- a/java/java/spytools/build.xml
+++ b/java/java/spytools/build.xml
@@ -5,7 +5,7 @@
 
 	Copyright (c) 2002	Dustin Sallings <dustin@spy.net>
 
-	$Id: build.xml,v 1.25 2002/08/16 05:32:57 dustin Exp $
+	$Id: build.xml,v 1.26 2002/08/16 05:45:21 dustin Exp $
 
 	-->
 
@@ -30,6 +30,7 @@
 
 	<property name="SRCDIR" value="."/>
 	<property name="BUILDDIR" value="."/>
+	<property name="DOCDEST" value="docs"/>
 	<property name="DEPRECATION" value="on"/>
 	<property name="DEBUG" value="on"/>
 	<property name="VERBOSE" value="off"/>
@@ -39,6 +40,11 @@
 	</taskdef>
 
 	<!-- end setup -->
+
+	<!-- Turn on verbose compiles -->
+	<target name="verbose">
+		<property name="VERBOSE" value="on"/>
+	</target>
 
 	<target name="clean">
 		<delete>
@@ -61,11 +67,11 @@
 
 	<target name="docs" depends="all" unless="docs.upToDate">
 		<mkdir dir="docs"/>
-		<javadoc destdir="docs"
+		<javadoc destdir="${DOCDEST}"
 			author="true"
 			version="true"
 			use="true"
-			sourcePath="."
+			sourcePath="${SRCDIR}"
 			packagenames="net.spy.*"
 			windowtitle="Spy.jar Documentation">
 			<link href="http://java.sun.com/j2se/1.3/docs/api/"/>
@@ -87,8 +93,7 @@
 	</target>
 
 	<!-- Regular install -->
-	<target name="install" depends="install-jar,install-docs">
-	</target>
+	<target name="install" depends="install-jar,install-docs"/>
 
 	<target name="install-jar" depends="spy.jar">
 		<copy file="spy.jar"
@@ -157,30 +162,13 @@
 		</javac>
 	</target>
 
-	<!-- Make sure the interface implementor is there -->
-	<target name="iitask">
-		<javac
-			srcdir="${SRCDIR}"
-			destdir="${BUILDDIR}"
-			deprecation="${DEPRECATION}"
-			debug="${DEBUG}"
-			verbose="${VERBOSE}">
-
-			<include name="net/spy/util/InterfaceImplementor.java"/>
-			<include name="net/spy/util/InterfaceImplementorTask.java"/>
-		</javac>
-		<taskdef name="spgen" classname="net.spy.util.InterfaceImplementorTask">
-			<classpath refid="myclasses"/>
-		</taskdef>
-	</target>
-
 	<target name="test-spfiles" depends="all">
 		<spgen srcdir="tests" destdir="tests"/>
 	</target>
 
 	<target name="test-classes" depends="all,test-spfiles">
-		<javac srcdir="tests" destdir="tests" deprecation="on"
-				debug="on" verbose="off">
+		<javac srcdir="tests" destdir="tests" deprecation="${DEPRECATION}"
+				debug="${DEBUG}" verbose="${VERBOSE}">
 			<classpath refid="myclasses"/>
 			<classpath refid="junitclasses"/>
 			<include name="net/spy/**/*.java"/>
@@ -220,9 +208,6 @@
 	<target name="dbstuff" depends="resultset,preparedstatement">
 	</target>
 
-	<!-- Do nothing -->
-	<target name="noop"/>
-
 	<!-- Build the result set -->
 	<target name="checkrsupdate">
 		<uptodate property="rs.uptodate"
@@ -233,7 +218,9 @@
 	<!-- real target for the result set -->
 	<target name="resultset" unless="rs.uptodate"
 		depends="checkrsupdate,interfaceimplementor">
-		<javac srcdir="." destdir="." deprecation="on" debug="on" verbose="off">
+		<javac
+			srcdir="${SRCDIR}" destdir="${BUILDDIR}"
+			deprecation="${DEPRECATION}" debug="${DEBUG}" verbose="${VERBOSE}">
 			<classpath refid="myclasses"/>
 			<include name="net/spy/db/CachedResultSetStub.java"/>
 		</javac>
@@ -258,7 +245,9 @@
 	<!-- The real target for prepared statements -->
 	<target name="preparedstatement" unless="pst.uptodate"
 		depends="checkpstupdate,resultset,interfaceimplementor">
-		<javac srcdir="." destdir="." deprecation="on" debug="on" verbose="off">
+		<javac
+			srcdir="${SRCDIR}" destdir="${BUILDDIR}"
+			deprecation="${DEPRECATION}" debug="${DEBUG}" verbose="${VERBOSE}">
 			<classpath refid="myclasses"/>
 			<include name="net/spy/db/CachePreparedStatementStub.java"/>
 		</javac>
@@ -275,7 +264,9 @@
 	</target>
 
 	<target name="interfaceimplementor">
-		<javac srcdir="." destdir="." deprecation="on" debug="on" verbose="off">
+		<javac
+			srcdir="${SRCDIR}" destdir="${BUILDDIR}"
+			deprecation="${DEPRECATION}" debug="${DEBUG}" verbose="${VERBOSE}">
 			<classpath refid="myclasses"/>
 			<include name="net/spy/util/InterfaceImplementor.java"/>
 		</javac>
@@ -288,7 +279,9 @@
 	</target>
 
 	<target name="pre-rmic">
-		<javac srcdir="." destdir="." deprecation="on" debug="on" verbose="off">
+		<javac
+			srcdir="${SRCDIR}" destdir="${BUILDDIR}"
+			deprecation="${DEPRECATION}" debug="${DEBUG}" verbose="${VERBOSE}">
 			<classpath refid="myclasses"/>
 			<include name="net/spy/rmi/RObjectImpl.java"/>
 		</javac>
