--- a/java/java/spytools/build.xml
+++ b/java/java/spytools/build.xml
@@ -5,7 +5,7 @@
 
 	Copyright (c) 2002	Dustin Sallings <dustin@spy.net>
 
-	$Id: build.xml,v 1.30 2002/08/17 04:02:24 dustin Exp $
+	$Id: build.xml,v 1.31 2002/08/17 04:14:14 dustin Exp $
 
 	-->
 
@@ -46,7 +46,7 @@
 
 	<target name="clean">
 		<delete>
-			<fileset dir="${BUILDIR}/net">
+			<fileset dir="${BUILDDIR}/net">
 				<include name="**/*.class"/>
 				<include name="spy/build.properties"/>
 				<include name="spy/db/CachePreparedStatement.java"/>
